--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="The Corniche.jpg" alt="The Corniche image">
                 <div class="card-content">
                     <h1>The Corniche</h1>
-                    <p>The <span>Corniche </span> A beautiful waterfront promenade offering stunning views of the Red
+                    <p>The <span> Corniche </span> A beautiful waterfront promenade offering stunning views of the Red
                         Sea, lined with parks, restaurants, and recreational areas.</p>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                 <img src="balad - historic jeddah.jpg" alt="balad - historic jeddah">
                 <div class="card-content">
                     <h1>AL Balad</h1>
-                    <p> <span>Al-Balad</span>The historic district of Jeddah known for its traditional architecture,
+                    <p> <span> Al-Balad</span> The historic district of Jeddah known for its traditional architecture,
                         bustling souks (markets), and ancient coral houses.</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                 <img src="jeddah flagpole.jpg" alt="balad - historic jeddah">
                 <div class="card-content">
                     <h1>Flagpole of jeddah</h1>
-                    <p>The <span>Flagpole of jeddah</span>is a towering structure located in Jeddah, Saudi Arabia. It
+                    <p>The <span>Flagpole of jeddah </span>is a towering structure located in Jeddah, Saudi Arabia. It
                         holds the record for being the world's tallest flagpole.</p>
                 </div>
             </div>
@@ -168,7 +168,7 @@
 
     <footer id="Contacts">
         <div class="footer-content">
-            <h2>Contac Us</h2>
+            <h2>Contact Us</h2>
             <ul class="socials">
                 <li><a href="#"><i class="gg-facebook"></i></a></li>
                 <li><a href="#"><i class="gg-twitter"></i></a></li>
